Added id and classes

--- a/anotherFolder/styles2.css
+++ b/anotherFolder/styles2.css
@@ -6,3 +6,12 @@ p {
 body {
     background-color: blanchedalmond;
 }
+
+#schedule{
+    background-color: beige;
+
+}
+.main-text{
+    background: crimson;
+    color: wheat;
+}
