--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,12 @@ li {
 body {
     background-color: blanchedalmond;
 }
+
+#schedule{
+    background-color: beige;
+
+}
+.main-text{
+    background: crimson;
+    color: wheat;
+}
