--- a/anotherFolder/styles.css
+++ b/anotherFolder/styles.css
@@ -1,5 +1,6 @@
 html {
     font-family: sans-serif;
+    text-align: center;
 }
 
 table {
@@ -7,15 +8,18 @@ table {
     border: 2px solid rgb(200,200,200);
     letter-spacing: 1px;
     font-size: 0.8rem;
+    text-align: center;
 }
 
 td, th {
     border: 1px solid rgb(190,190,190);
     padding: 10px 20px;
+    text-align: center;
 }
 
 th {
     background-color: rgb(235,235,235);
+    text-align: center;
 }
 
 td {
@@ -24,12 +28,15 @@ td {
 
 tr:nth-child(even) td {
     background-color: rgb(250,250,250);
+    text-align: center;
 }
 
 tr:nth-child(odd) td {
     background-color: rgb(245,245,245);
+    text-align: center;
 }
 
 caption {
     padding: 10px;
+    text-align: center;
 }
